fixed the header spacing, caused another problem

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,14 +19,14 @@ body {
     width: 512px;
     height: 233px;
     background-color: #1b9647;
-    transform: translate(512px, -276px);
+    transform: translate(512px, -233px);
 }
 
 #first_name {
     width: 512px;
     height: 233px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -34,7 +34,7 @@ body {
     width: 512px;
     height: 233px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
